# weDocs-crdt-engine

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
benches/: convergence.rs
src/: engine.rs  lib.rs  main.rs  service.rs  telemetry.rs
tests/: convergence_proptest.rs  registry_fanout.rs
